# pico-pg

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/picopg/: __init__.py  connections.py  crud.py  models.py  partials.py  sql_builder.py
tests/: test_crud.py  test_sql_builder.py
