[project]
name = "picopg"
version = "0.1.0"
description = "A lightweight, Pydantic-powered micro ORM for interacting with PostgreSQL databases, inspired by SQLModel but without the SQLAlchemy dependency."
readme = "README.md"
authors = [
    { name = "Cristian Marín", email = "cm961224@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary,pool]>=3.2.12",
    "pydantic>=2.12.3",
]

[project.scripts]
picopg = "picopg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.2",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
